# FARM-APP-TEMPLATE

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: build_and_publish.yml  main.yml
client/: .eslintignore  .eslintrc  .prettierignore  .stylelintignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
client/public/: manifest.json
client/src/: App.css  App.js  App.jsx  main.jsx
config/: logging.py  secrets.yml  secrets_parser.py
models/: abc_models.py
routes/: abc_routes.py
services/: abc_services.py
tests/: abc_test.py
utils/: hashing.py
