[project]
name = "farm-app-template"
version = "1.0.0"
description = "A FARM (FastAPI, React, MongoDB) stack template"
requires-python = ">=3.13"
license = "MIT"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pymongo>=4.10",
    "motor>=3.6",
    "pydantic[email]>=2.10",
    "PyYAML>=6.0",
    "python-multipart>=0.0.18",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "coverage>=7.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E226", "E302"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
